--- a/D6.html
+++ b/D6.html
@@ -313,29 +313,29 @@
         Crea una funzione che cambi il colore del h2 con id "changeMyColor" con un colore random ad ogni click ricevuto
       */
       const h2 = document.querySelector("h2");
-      const changeColorWithRandom = function (param) {
-        // let arr = [1, 2, 3, 4, 5];
-        for (let i = 0; i < 10; i++) {
-          const numRnd = Math.ceil(Math.random() * 6);
-          switch (numRnd) {
-            case 1:
-              h2.style.color = "red";
-              break;
-            case 2:
-              h2.style.color = "blue";
-            case 3:
-              h2.style.color = "yellow";
-              break;
-            case 4:
-              h2.style.color = "green";
-              break;
-            case 5:
-              h2.style.color = "orange";
-              break;
-          }
+
+      const changeColorWithRandom = function () {
+        const numRnd = Math.ceil(Math.random() * 5);
+        switch (numRnd) {
+          case 1:
+            h2.style.color = "red";
+            break;
+          case 2:
+            h2.style.color = "blue";
+            break;
+          case 3:
+            h2.style.color = "yellow";
+            break;
+          case 4:
+            h2.style.color = "green";
+            break;
+          case 5:
+            h2.style.color = "orange";
+            break;
         }
       };
-      setInterval(changeColorWithRandom, 2000);
+
+      setInterval(changeColorWithRandom, 500);
     </script>
   </body>
 </html>
